--- a/views/index.jade
+++ b/views/index.jade
@@ -6,8 +6,6 @@ html
     h2 very basic ics to csv converter
     h3 input the url of your ics
     form(name="input", action="/", method="post")
-        p key host: (p.e. www.google.com)
-            input(type="text", name="icsHost")
-        p key path: (p.e. /my/path/to/my/private/basic.ics)
-            input(type="text", name="icsPath")
+        p ics url:
+            input(type="text", name="icsUrl")
         input(type="submit", value="Submit")
